# neural-network-example

./: .gitignore  LICENSE  README.md  neural-network-example.cabal
.github/workflows/: ci.yaml
src/: Conduit.hs  Model.hs  Test.hs  Train.hs  Types.hs  Util.hs
